--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     font-size: 21px;
     font-weight: 500;
     border-radius: 5px;
+    transition: 0.1s;
 }
 
 .functional {
@@ -65,4 +66,9 @@
 
 .press {
     background-color: #226870;
+}
+
+.description {
+    font-size: 20px;
+    padding: 10px;
 }
